<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/CardQuestionDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardsHorizontalMargins"
            android:layout_marginEnd="@dimen/cardsHorizontalMargins"
            android:layout_marginBottom="@dimen/questionVerticalMargins"
            app:contentPadding="@dimen/borderQuestionCardPadding">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/infoLogo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/info_dialog_logo_description"
                    android:src="@drawable/ic_baseline_info_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/textV"
                    style="@style/QuestionTexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/questionTextMargin"
                    android:text="@string/develop_by"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/infoLogo" />

                <TextView
                    android:id="@+id/text2V"
                    style="@style/QuestionTexts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/questionTextMargin"
                    android:text="@string/user_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textV" />

                <Button
                    android:id="@+id/goTwitter"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    app:icon="@drawable/ic_twitter_ico"
                    app:layout_constraintTop_toBottomOf="@id/text2V" />

                <Button
                    android:id="@+id/goLinkedIn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedin"
                    app:icon="@drawable/ic_linkedin"
                    app:layout_constraintTop_toBottomOf="@id/goTwitter" />

                <Button
                    android:id="@+id/readyBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/t_ready"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@id/goLinkedIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

</layout>
